fix overlapping issue in chrome

--- a/sass/partials/components/_menu.scss
+++ b/sass/partials/components/_menu.scss
@@ -10,6 +10,7 @@
     left: 0px;
     font-weight: 400;
     @include shadow(1);
+    z-index: 2;
     .content {
         @include flexbox(row, wrap, space-between, center);
         height: inherit;
@@ -76,6 +77,7 @@
         > a {
             width: 100%;
             display: block;
+            font-size: 1em;
         }
     }
     // Responsive Version (Off-Canvas)
